--- a/src/main/resources/templates/common-user/content.html
+++ b/src/main/resources/templates/common-user/content.html
@@ -9,7 +9,81 @@
                             <div class="single-slide slick-slide" data-sal="slide-up" data-sal-delay="400"
                                  data-sal-duration="800">
                                 <span class="subtitle"><i class="fas fa-fire"></i> Hot Deal In This Week</span>
-                                <h1 class="title">Roco Wireless Headphone</h1>
+                                <h1 class="title">Macbook Series Collection</h1>
+                                <div class="slide-action">
+                                    <div class="shop-btn">
+                                        <a th:href="@{/user/cart(cartId=${session.cartId})}"
+                                           class="axil-btn btn-bg-white"><i
+                                                class="fal fa-shopping-cart"></i>Shop Now</a>
+                                    </div>
+                                    <div class="item-rating">
+                                        <div class="thumb">
+                                            <ul>
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
+                                                         alt="Author"></li>
+                                            </ul>
+                                        </div>
+                                        <div class="content">
+                                                <span class="rating-icon">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fal fa-star"></i>
+                                        </span>
+                                            <span class="review-text">
+                                            <span>100+</span> Reviews
+                                                </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-slide slick-slide">
+                                <span class="subtitle">Iphone 16 Series Collection<i class="fas fa-fire"></i> Hot Deal In This Week</span>
+                                <h1 class="title"></h1>
+                                <div class="slide-action">
+                                    <div class="shop-btn">
+                                        <a th:href="@{/user/cart(cartId=${session.cartId})}"
+                                           class="axil-btn btn-bg-white"><i
+                                                class="fal fa-shopping-cart"></i>Shop Now</a>
+                                    </div>
+                                    <div class="item-rating">
+                                        <div class="thumb">
+                                            <ul>
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
+                                                         alt="Author"></li>
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
+                                                         alt="Author"></li>
+                                            </ul>
+                                        </div>
+                                        <div class="content">
+                                                <span class="rating-icon">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fal fa-star"></i>
+                                        </span>
+                                            <span class="review-text">
+                                            <span>100+</span> Reviews
+                                                </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-slide slick-slide">
+                                <span class="subtitle"><i class="fas fa-fire"></i> Hot Deal In This Week</span>
+                                <h1 class="title">Laptop for AI</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
                                         <a th:href="@{/user/cart(cartId=${session.cartId})}"
@@ -49,79 +123,8 @@
                                 <h1 class="title">Smart Digital Watch</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
-                                                class="fal fa-shopping-cart"></i>Shop Now</a>
-                                    </div>
-                                    <div class="item-rating">
-                                        <div class="thumb">
-                                            <ul>
-                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
-                                                         alt="Author"></li>
-                                            </ul>
-                                        </div>
-                                        <div class="content">
-                                                <span class="rating-icon">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fal fa-star"></i>
-                                        </span>
-                                            <span class="review-text">
-                                            <span>100+</span> Reviews
-                                                </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-slide slick-slide">
-                                <span class="subtitle"><i class="fas fa-fire"></i> Hot Deal In This Week</span>
-                                <h1 class="title">Laptop for AI</h1>
-                                <div class="slide-action">
-                                    <div class="shop-btn">
-                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
-                                                class="fal fa-shopping-cart"></i>Shop Now</a>
-                                    </div>
-                                    <div class="item-rating">
-                                        <div class="thumb">
-                                            <ul>
-                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
-                                                         alt="Author"></li>
-                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
-                                                         alt="Author"></li>
-                                            </ul>
-                                        </div>
-                                        <div class="content">
-                                                <span class="rating-icon">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fal fa-star"></i>
-                                        </span>
-                                            <span class="review-text">
-                                            <span>100+</span> Reviews
-                                                </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-slide slick-slide">
-                                <span class="subtitle"><i class="fas fa-fire"></i> Hot Deal In This Week</span>
-                                <h1 class="title">Smart Digital Watch</h1>
-                                <div class="slide-action">
-                                    <div class="shop-btn">
-                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
+                                        <a th:href="@{/user/cart(cartId=${session.cartId})}"
+                                           class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -160,18 +163,18 @@
                         <div class="slider-thumb-activation-one axil-slick-dots">
                             <div class="single-slide slick-slide" data-sal="slide-up" data-sal-delay="600"
                                  data-sal-duration="1500">
-                                <img th:src="@{/etrade/assets/images/product/product-38.png}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/my-img/macbook-series.jpg}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
-                                    <span class="price-amount">$49.00</span>
+                                    <span class="price-amount">$1099.00</span>
                                 </div>
                             </div>
                             <div class="single-slide slick-slide" data-sal="slide-up" data-sal-delay="600"
                                  data-sal-duration="1500">
-                                <img th:src="@{/etrade/assets/images/product/product-39.png}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/my-img/iphone-16-series.jpeg}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
-                                    <span class="price-amount">$49.00</span>
+                                    <span class="price-amount">$999.00</span>
                                 </div>
                             </div>
                             <div class="single-slide slick-slide">
