--- a/src/main/resources/templates/common-admin/sidebar.html
+++ b/src/main/resources/templates/common-admin/sidebar.html
@@ -25,6 +25,18 @@
                             <span class="ml-4">Dashboards</span>
                         </a>
                     </li>
+                    <li class="input-active">
+                        <a th:href="@{/admin/orders}" class="svg-icon">
+                            <svg class="svg-icon" id="p-dash1" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                 stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                                <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                            </svg>
+                            <span class="ml-4">Orders</span>
+                        </a>
+                    </li>
                     <li class=" ">
                         <a href="#product" class="collapsed" data-toggle="collapse" aria-expanded="false">
                             <svg class="svg-icon" id="p-dash2" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
@@ -112,7 +124,7 @@
                                 </a>
                             </li>
                             <li class="">
-                                <a th:href="@{/admin/categories/add-brand}">
+                                <a th:href="@{/admin/brands/add-brand}">
                                     <i class="las la-minus"></i><span>Add Brand</span>
                                 </a>
                             </li>
@@ -257,6 +269,19 @@
                                 </a>
                             </li>
                         </ul>
+                    </li>
+                    <li class="input-active">
+                        <a th:href="@{/user/home}" class="svg-icon">
+                            <svg class="svg-icon" id="p-dash8" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                 stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="9" cy="7" r="4"></circle>
+                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            </svg>
+                            <span class="ml-4">User Home</span>
+                        </a>
                     </li>
 
 
